--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.DetailActivity"
+            android:label="Berita"
             android:parentActivityName=".view.Berita">
         <meta-data
             android:name="android.support.PARRENT_ACTIVITY"
