--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.exmple.lenovo.mynotesapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".AppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_info" />
+        </receiver>
+
         <activity
             android:name=".view.DetailActivity"
             android:label="Berita"
             android:parentActivityName=".view.Berita">
-        <meta-data
-            android:name="android.support.PARRENT_ACTIVITY"
-            android:value=".view.Berita"/>
+            <meta-data
+                android:name="android.support.PARRENT_ACTIVITY"
+                android:value=".view.Berita" />
         </activity>
         <activity
             android:name=".view.Settings"
@@ -23,7 +34,7 @@
             android:parentActivityName=".view.MainActivity">
             <meta-data
                 android:name="android.support.PARRENT_ACTIVITY"
-                android:value=".view.MainActivity"/>
+                android:value=".view.MainActivity" />
         </activity>
         <activity
             android:name=".view.Berita"
@@ -31,7 +42,7 @@
             android:parentActivityName=".view.MainActivity">
             <meta-data
                 android:name="android.support.PARRENT_ACTIVITY"
-                android:value=".view.MainActivity"/>
+                android:value=".view.MainActivity" />
         </activity>
         <activity
             android:name=".Menu"
@@ -44,7 +55,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
